Get rid of unused dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,12 @@ set(SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/glsl2spv.cpp
 )
 
+set(ENABLE_GLSLANG_BINARIES OFF)
+set(ENABLE_HLSL OFF)
+set(ENABLE_CTEST OFF)
+set(ENABLE_SPVREMAPPER OFF)
 
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/glslang)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/glslang/)
 
 add_library(glsl2spv STATIC ${SOURCES})
 target_link_libraries(glsl2spv SPIRV glslang)
