--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,12 @@ set(SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/glsl2spv.cpp
 )
 
-set(ENABLE_GLSLANG_BINARIES OFF)
-set(ENABLE_HLSL OFF)
-set(ENABLE_CTEST OFF)
-set(ENABLE_SPVREMAPPER OFF)
+set(ENABLE_GLSLANG_JS OFF CACHE BOOL "")
+
+set(ENABLE_GLSLANG_BINARIES OFF CACHE BOOL "")
+set(ENABLE_HLSL OFF CACHE BOOL "")
+set(ENABLE_CTEST OFF CACHE BOOL "")
+set(ENABLE_SPVREMAPPER OFF CACHE BOOL "")
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/glslang/)
 
